Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-17289

DeleteWithMeta returns EEXISTS instead of SUCCESS for forced deletions

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 4.1.1, 4.5.0
    • 4.0.0, 4.1.0
    • DCP
    • Security Level: Public
    • None
    • Untriaged
    • Unknown

    Description

      There in cases in which delete with meta needs to forcefully persist the the delete. In this case a temporary item is created. But it won't get persisted because the CAS value of the incoming delete with meta won't match with the existing temp item CAS, thus returning EEXISTS instead of updating with incoming metadata and succeeding.

      Attachments

        Issue Links

          Activity

            People

              sriram Sriram Ganesan (Inactive)
              sriram Sriram Ganesan (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty